--- a/Python/externallibs/server/templates/index.html
+++ b/Python/externallibs/server/templates/index.html
@@ -60,7 +60,7 @@
                 return false;
             });
             $('form#broadcast').submit(function(event) {
-                socket.emit('trigger_this', {command:"image" , data:$('#broadcast_data').val()});
+                socket.emit('trigger_this', {command:"startProcess" , data:$('#broadcast_data').val()});
                 return false;
             });
             $('form#join').submit(function(event) {
